--- a/HZSHOP/HZSHOP/Cart/Controller/HZCartViewController.xib
+++ b/HZSHOP/HZSHOP/Cart/Controller/HZCartViewController.xib
@@ -13,8 +13,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HZCartViewController">
             <connections>
                 <outlet property="cartListTableView" destination="xNp-Vy-UK0" id="DW2-oW-PBK"/>
+                <outlet property="editView" destination="ffo-Ff-Chi" id="c65-vt-EYE"/>
                 <outlet property="moneyLabel" destination="ogG-0N-Xx9" id="FXL-e0-fIv"/>
                 <outlet property="selecteButton" destination="2ac-p5-nyp" id="jrT-3C-ycM"/>
+                <outlet property="settlenentView" destination="gRu-lk-yHk" id="LQ2-8U-HnB"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -45,10 +47,10 @@
                     <rect key="frame" x="0.0" y="533" width="320" height="35"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2ac-p5-nyp">
-                            <rect key="frame" x="15" y="11" width="13" height="13"/>
+                            <rect key="frame" x="15" y="10" width="15" height="15"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="13" id="H7a-3N-eR1"/>
-                                <constraint firstAttribute="height" constant="13" id="hq1-eb-b4a"/>
+                                <constraint firstAttribute="width" constant="15" id="H7a-3N-eR1"/>
+                                <constraint firstAttribute="height" constant="15" id="hq1-eb-b4a"/>
                             </constraints>
                             <state key="normal" title="Button" backgroundImage="radio"/>
                             <state key="selected" image="radioed"/>
@@ -57,7 +59,7 @@
                             </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="全选" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zc9-An-Xss">
-                            <rect key="frame" x="33" y="0.0" width="42" height="35"/>
+                            <rect key="frame" x="35" y="0.0" width="42" height="35"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="42" id="bBt-1V-blq"/>
                             </constraints>
@@ -65,8 +67,8 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="总计:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mQf-YM-Gxl">
-                            <rect key="frame" x="90" y="0.0" width="35" height="35"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="总计:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mQf-YM-Gxl">
+                            <rect key="frame" x="92" y="0.0" width="35" height="35"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="35" id="9si-XI-mat"/>
                             </constraints>
@@ -86,7 +88,7 @@
                             </state>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ogG-0N-Xx9">
-                            <rect key="frame" x="130" y="0.0" width="115" height="35"/>
+                            <rect key="frame" x="132" y="0.0" width="113" height="35"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -112,18 +114,90 @@
                         <constraint firstItem="Zc9-An-Xss" firstAttribute="top" secondItem="gRu-lk-yHk" secondAttribute="top" id="ymN-cZ-cn2"/>
                     </constraints>
                 </view>
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ffo-Ff-Chi">
+                    <rect key="frame" x="0.0" y="533" width="320" height="35"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WWl-Wf-14N">
+                            <rect key="frame" x="15" y="10" width="15" height="15"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="15" id="FZ9-J8-jRd"/>
+                                <constraint firstAttribute="height" constant="15" id="TEv-QM-CFT"/>
+                            </constraints>
+                            <state key="normal" title="Button" backgroundImage="radio"/>
+                            <state key="selected" image="radioed"/>
+                            <connections>
+                                <action selector="selecteAll:" destination="-1" eventType="touchUpInside" id="Ds6-oi-wAl"/>
+                            </connections>
+                        </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="全选" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6UR-RB-RyB">
+                            <rect key="frame" x="35" y="0.0" width="42" height="35"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="42" id="Q2m-y3-Hia"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sAf-6j-rCX">
+                            <rect key="frame" x="179" y="0.0" width="70" height="35"/>
+                            <color key="backgroundColor" red="0.74509803919999995" green="0.74509803919999995" blue="0.74509803919999995" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="sAf-6j-rCX" secondAttribute="height" multiplier="2:1" id="ZeD-qZ-G1k"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                            <state key="normal" title="移到关注">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </state>
+                            <connections>
+                                <action selector="addFollowGoods:" destination="-1" eventType="touchUpInside" id="vmh-5i-nsK"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V0A-pW-IQj">
+                            <rect key="frame" x="250" y="0.0" width="70" height="35"/>
+                            <color key="backgroundColor" red="0.74509803919999995" green="0.74509803919999995" blue="0.74509803919999995" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="V0A-pW-IQj" secondAttribute="height" multiplier="2:1" id="Baf-bd-lfk"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                            <state key="normal" title="删除">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </state>
+                            <connections>
+                                <action selector="deleteCartGoods:" destination="-1" eventType="touchUpInside" id="33T-AD-tHG"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="V0A-pW-IQj" secondAttribute="trailing" id="3C1-to-R1N"/>
+                        <constraint firstItem="V0A-pW-IQj" firstAttribute="leading" secondItem="sAf-6j-rCX" secondAttribute="trailing" constant="1" id="6z8-eL-u66"/>
+                        <constraint firstItem="V0A-pW-IQj" firstAttribute="top" secondItem="ffo-Ff-Chi" secondAttribute="top" id="B0j-PC-n6g"/>
+                        <constraint firstItem="6UR-RB-RyB" firstAttribute="top" secondItem="ffo-Ff-Chi" secondAttribute="top" id="I5j-Cb-MCh"/>
+                        <constraint firstItem="WWl-Wf-14N" firstAttribute="centerY" secondItem="ffo-Ff-Chi" secondAttribute="centerY" id="IXp-ed-9o3"/>
+                        <constraint firstAttribute="bottom" secondItem="6UR-RB-RyB" secondAttribute="bottom" id="O6L-km-TnH"/>
+                        <constraint firstItem="6UR-RB-RyB" firstAttribute="leading" secondItem="WWl-Wf-14N" secondAttribute="trailing" constant="5" id="du0-rn-5HL"/>
+                        <constraint firstItem="sAf-6j-rCX" firstAttribute="top" secondItem="ffo-Ff-Chi" secondAttribute="top" id="gus-Px-OD2"/>
+                        <constraint firstAttribute="bottom" secondItem="V0A-pW-IQj" secondAttribute="bottom" id="hhs-YO-M1C"/>
+                        <constraint firstAttribute="width" secondItem="ffo-Ff-Chi" secondAttribute="height" multiplier="64:7" id="ho0-89-nwc"/>
+                        <constraint firstAttribute="bottom" secondItem="sAf-6j-rCX" secondAttribute="bottom" id="l7Y-fE-8Nb"/>
+                        <constraint firstItem="WWl-Wf-14N" firstAttribute="leading" secondItem="ffo-Ff-Chi" secondAttribute="leading" constant="15" id="oWz-kZ-zGu"/>
+                    </constraints>
+                </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
+                <constraint firstItem="ffo-Ff-Chi" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="1VR-HS-6ek"/>
                 <constraint firstItem="gRu-lk-yHk" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="1jA-at-Jux"/>
                 <constraint firstItem="xNp-Vy-UK0" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="2rF-vL-IlI"/>
                 <constraint firstItem="gRu-lk-yHk" firstAttribute="top" secondItem="xNp-Vy-UK0" secondAttribute="bottom" id="8Fx-v6-tCv"/>
                 <constraint firstItem="gRu-lk-yHk" firstAttribute="bottom" secondItem="Q5M-cg-NOt" secondAttribute="bottom" id="F1T-gD-8qo"/>
                 <constraint firstItem="gRu-lk-yHk" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="TH8-kA-le7"/>
                 <constraint firstItem="8eg-dJ-XE6" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="ZAn-nw-Xpu"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="ffo-Ff-Chi" secondAttribute="bottom" id="ZVW-hJ-qdx"/>
                 <constraint firstItem="8eg-dJ-XE6" firstAttribute="bottom" secondItem="Q5M-cg-NOt" secondAttribute="bottom" id="ZWE-mU-Se9"/>
                 <constraint firstItem="xNp-Vy-UK0" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="clv-u7-ERP"/>
                 <constraint firstItem="xNp-Vy-UK0" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="hcN-ee-7XZ"/>
+                <constraint firstItem="ffo-Ff-Chi" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="jBD-iL-sjG"/>
                 <constraint firstItem="8eg-dJ-XE6" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="peA-5b-aNq"/>
                 <constraint firstItem="8eg-dJ-XE6" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="uuX-X2-fqR"/>
             </constraints>
