--- a/HZSHOP/HZSHOP/Mine/Controller/HZAddressListViewController.xib
+++ b/HZSHOP/HZSHOP/Mine/Controller/HZAddressListViewController.xib
@@ -47,7 +47,7 @@
                         <constraint firstAttribute="trailing" secondItem="3Vz-9V-SVi" secondAttribute="trailing" constant="16" id="bSK-bd-o28"/>
                     </constraints>
                 </view>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="LwC-sj-ite">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="LwC-sj-ite">
                     <rect key="frame" x="0.0" y="20" width="320" height="478"/>
                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                     <connections>
