--- a/HZSHOP/HZSHOP/Mine/Controller/HZMyFollowGoodsViewController.xib
+++ b/HZSHOP/HZSHOP/Mine/Controller/HZMyFollowGoodsViewController.xib
@@ -30,7 +30,7 @@
                     </connections>
                 </tableView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="fvV-ZO-94B" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="Mgs-8M-QIk"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="fvV-ZO-94B" secondAttribute="trailing" id="lNX-a2-1Zc"/>
